--- a/index.html
+++ b/index.html
@@ -1,9 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Play the classic Tic Tac Toe game online! Challenge yourself or a friend, no download needed."
+    />
+    <meta
+      name="keywords"
+      content="Tic Tac Toe, online game, free, XO, two player, fun, board game"
+    />
+    <meta name="author" content="DrZoidberg" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourwebsite.com/" />
+    <meta property="og:title" content="Tic Tac Toe Game | Play Now" />
+    <meta
+      property="og:description"
+      content="Play the classic Tic Tac Toe game online! Challenge yourself or a friend, no download needed."
+    />
+    <meta property="og:image" content="./screenshot.png" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://yourwebsite.com/" />
+    <meta property="twitter:title" content="Tic Tac Toe Game | Play Now" />
+    <meta
+      property="twitter:description"
+      content="Play the classic Tic Tac Toe game online! Challenge yourself or a friend, no download needed."
+    />
+    <meta
+      property="twitter:image"
+      content="https://yourwebsite.com/screenshot.png"
+    />
     <title>Tic Tac Toe</title>
   </head>
   <body>
