added actual link to meta tags

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="author" content="DrZoidberg" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourwebsite.com/" />
+    <meta property="og:url" content="https://drzoidberg-react-tic-tac-toe.netlify.app/" />
     <meta property="og:title" content="Tic Tac Toe Game | Play Now" />
     <meta
       property="og:description"
@@ -24,7 +24,7 @@
     <meta property="og:image" content="./screenshot.png" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://yourwebsite.com/" />
+    <meta property="twitter:url" content="https://drzoidberg-react-tic-tac-toe.netlify.app/" />
     <meta property="twitter:title" content="Tic Tac Toe Game | Play Now" />
     <meta
       property="twitter:description"
@@ -32,7 +32,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://yourwebsite.com/screenshot.png"
+      content="https://drzoidberg-react-tic-tac-toe.netlify.app/screenshot.png"
     />
     <title>Tic Tac Toe</title>
   </head>
