hotfix: fix ResultMenu bug

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://drzoidberg-react-tic-tac-toe.netlify.app/screenshot.png"
+      content="./screenshot.png"
     />
     <title>Tic Tac Toe</title>
   </head>
