fix open graph image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       property="og:description"
       content="Play the classic Tic Tac Toe game online! Challenge yourself or a friend, no download needed."
     />
-    <meta property="og:image" content="./screenshot.png" />
+    <meta property="og:image" content="https://drzoidberg-react-tic-tac-toe.netlify.app/screenshot.png" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://drzoidberg-react-tic-tac-toe.netlify.app/" />
@@ -32,7 +32,7 @@
     />
     <meta
       property="twitter:image"
-      content="./screenshot.png"
+      content="https://drzoidberg-react-tic-tac-toe.netlify.app/screenshot.png"
     />
     <title>Tic Tac Toe</title>
   </head>
